--- a/waybar/style.css
+++ b/waybar/style.css
@@ -51,7 +51,7 @@ window#waybar {
 
 #workspaces button {
   border-radius: 500px;
-  padding: 1px;
+  padding: 3px;
   margin: 0 2px;
   background: #707070;
 }
@@ -64,6 +64,7 @@ window#waybar {
 #workspaces button.active:hover {
   border: none;
   box-shadow: none;
+  font-size: 13px;
 }
 
 #taskbar button:hover,
@@ -78,6 +79,7 @@ window#waybar {
 #workspaces button.active {
   background: #003554;
   padding: 1px 10px;
+  color: rgba(256, 256, 256, 0.7);
 }
 
 #battery {
